--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,26 +18,26 @@ jobs:
       matrix:
         xcode: ['26.0']
         config: ['debug', 'release']
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_DB: test_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     steps:
       - uses: actions/checkout@v5
       - name: Select Xcode ${{ matrix.xcode }}
         run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
       - name: Print Swift version
         run: swift --version
+      - name: Install PostgreSQL
+        run: |
+          brew install postgresql@18
+          brew services start postgresql@18
+          # Wait for PostgreSQL to be ready
+          for i in {1..30}; do
+            if /opt/homebrew/opt/postgresql@18/bin/pg_isready -h localhost; then
+              break
+            fi
+            sleep 1
+          done
+          # Create test database and user
+          /opt/homebrew/opt/postgresql@18/bin/createdb test_db
+          /opt/homebrew/opt/postgresql@18/bin/psql -d test_db -c "CREATE USER postgres WITH PASSWORD 'postgres' SUPERUSER;"
       - name: Cache Swift packages
         uses: actions/cache@v4
         with:
@@ -62,26 +62,26 @@ jobs:
       matrix:
         xcode: ['26.0']
         config: ['debug', 'release']
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_DB: test_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     steps:
       - uses: actions/checkout@v5
       - name: Select Xcode ${{ matrix.xcode }}
         run: sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
       - name: Print Swift version
         run: swift --version
+      - name: Install PostgreSQL
+        run: |
+          brew install postgresql@18
+          brew services start postgresql@18
+          # Wait for PostgreSQL to be ready
+          for i in {1..30}; do
+            if /opt/homebrew/opt/postgresql@18/bin/pg_isready -h localhost; then
+              break
+            fi
+            sleep 1
+          done
+          # Create test database and user
+          /opt/homebrew/opt/postgresql@18/bin/createdb test_db
+          /opt/homebrew/opt/postgresql@18/bin/psql -d test_db -c "CREATE USER postgres WITH PASSWORD 'postgres' SUPERUSER;"
       - name: Cache Swift packages
         uses: actions/cache@v4
         with:
@@ -105,7 +105,7 @@ jobs:
     container: swift:6.2
     services:
       postgres:
-        image: postgres:16
+        image: postgres:18
         env:
           POSTGRES_PASSWORD: postgres
           POSTGRES_USER: postgres
@@ -130,60 +130,44 @@ jobs:
           DATABASE_PASSWORD: postgres
         run: swift test
 
-  windows:
-    name: Windows (Swift 6.2)
-    runs-on: windows-latest
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_DB: test_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-    steps:
-      - uses: actions/checkout@v5
-      - uses: SwiftyLab/setup-swift@latest
-        with:
-          swift-version: "6.2"
-      - name: Build
-        run: swift build
-      - name: Run tests
-        env:
-          DATABASE_HOST: localhost
-          DATABASE_PORT: 5432
-          DATABASE_NAME: test_db
-          DATABASE_USER: postgres
-          DATABASE_PASSWORD: postgres
-        run: swift test
+  # Windows support disabled - container operations not supported on Windows runners
+  # Windows runners do not support Docker services which are required for PostgreSQL
+  # The tests require a PostgreSQL database to run
+  #
+  # windows:
+  #   name: Windows (Swift 6.2)
+  #   runs-on: windows-latest
+  #   steps:
+  #     - uses: actions/checkout@v5
+  #     - uses: SwiftyLab/setup-swift@latest
+  #       with:
+  #         swift-version: "6.2"
+  #     - name: Build
+  #       run: swift build
+  #     - name: Run tests
+  #       run: swift test
 
   readme-validation:
     name: README Code Examples
     runs-on: macos-26
-    services:
-      postgres:
-        image: postgres:16
-        env:
-          POSTGRES_PASSWORD: postgres
-          POSTGRES_USER: postgres
-          POSTGRES_DB: test_db
-        ports:
-          - 5432:5432
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
     steps:
       - uses: actions/checkout@v5
       - name: Select Xcode
         run: sudo xcode-select -s /Applications/Xcode_26.0.app
+      - name: Install PostgreSQL
+        run: |
+          brew install postgresql@18
+          brew services start postgresql@18
+          # Wait for PostgreSQL to be ready
+          for i in {1..30}; do
+            if /opt/homebrew/opt/postgresql@18/bin/pg_isready -h localhost; then
+              break
+            fi
+            sleep 1
+          done
+          # Create test database and user
+          /opt/homebrew/opt/postgresql@18/bin/createdb test_db
+          /opt/homebrew/opt/postgresql@18/bin/psql -d test_db -c "CREATE USER postgres WITH PASSWORD 'postgres' SUPERUSER;"
       - name: Run README verification tests
         env:
           DATABASE_HOST: localhost
